src/index.css
@import './styles/tensorblock-light.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

/* Add these styles for Electron window dragging */
.app-region-drag {
  -webkit-app-region: drag;
  app-region: drag;
}

.app-region-no-drag {
  -webkit-app-region: no-drag;
  app-region: no-drag;
}

::-webkit-scrollbar-track {
  background-color: transparent; /* 设置轨道背景为透明 */
}

::-webkit-scrollbar {
  width: 10px; /* 增大滚动条宽度 */
}

::-webkit-scrollbar-thumb {
  background: #00000033; /* 滑块的背景颜色 */
  border-radius: 10px;
}
::-webkit-scrollbar-thumb:hover {
  -webkit-transition: 0.3s;
  background: #00000066; /* 滑块的背景颜色 */
}

